# shit-head

./: .flake8  .gitignore  Dockerfile  build_image  dev.py  pyproject.toml  shit_head.py
app/: shit_head.py
app/classes/: game.py  player.py
app/test/: test_turns.py
app/utils/: card_deck.py  card_name_translator.py  clean_game_store.py  good_job.py  server_message.py
classes/: game.py  player.py
utils/: card_deck.py
